--- a/src/App.css
+++ b/src/App.css
@@ -7,26 +7,61 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  #preview {
-    animation: App-logo-spin 1s linear;
-  }
+#preview-label{
+  bottom: 0px;
+
+}
+
+table, th, td {
+  border: 1px solid black;
 }
 
 #preview {
+  margin: 1em;
+  padding: 1em;
+
+  margin-top: 0px;
+  padding-top: 0px;
+
   border-radius: 5px;
   border: white solid 5px;
-  margin: 3px;
-  padding: 1em;
+
+  text-align: left;
+
+  box-shadow: 10px 10px #e2e3f3;
+
+  background-color: white;
+  color: black;
+  width: 80%;
+  max-height: 50vh;
+  max-width: 50vw;
+  overflow: scroll;
+  align-self: center;
+}
+
+#previewcontainer{
+  width: 80%;
+  border: blue solid 10px;
 }
 
 #editor {
   border-radius: 5px;
   border: white solid 5px;
-  margin: 3em;
-  padding: 1em;
+  height: 50vh;
+  width: 60vw;
 }
 
+#editor-label{
+  padding: 1em;
+
+}
+
+#form{
+  border-radius: 5px;
+  border: white solid 5px;
+  margin-top: 1em;
+  padding-top: 1em;
+}
 
 .App-header {
   background-color: #393D40;
@@ -41,13 +76,4 @@
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(-10deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
 }
